--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "license": "Apache License, Version 2.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/gridcellcoder/google-speech-demos"
+    "url": "https://github.com/selinavs/google-speech-demos"
   },
   "author": "GridCell",
   "contributors": [
     "Nuno Freire <windowpane@gridcell.io"
   ],
-  "homepage": "https://github.com/gridcellcoder/google-speech-demos",
+  "homepage": "https://speechrecognition310.herokuapp.com",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
