--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
   "homepage": "https://speechrecognition310.herokuapp.com",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
+    "postinstall": "ng build --aot -prod"
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "1.2.3",
     "@agm/core": "^1.0.0-beta.0",
     "@angular/animations": "^4.2.3",
     "@angular/common": "^4.2.3",
