--- a/package.json
+++ b/package.json
@@ -64,5 +64,9 @@
     "ts-node": "~3.0.6",
     "tslint": "~5.4.3",
     "typescript": "~2.3.4"
-  }
+  },
+  "engines": {
+  "node": "6.11.1",
+  "npm": "3.10.9"
+}
 }
