--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "pree2e": "webdriver-manager update",
-    "postinstall": "ng build --aot -prod",
+    "postinstall": "ng build --env=prod --output-hashing none",
     "deploy": "git push origin master && git push heroku master"
   },
   "private": true,
