--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "pree2e": "webdriver-manager update",
-    "postinstall": "ng build --env=prod --output-hashing none",
+    "postinstall": "ng build --aot -prod",
     "deploy": "git push origin master && git push heroku master"
   },
   "private": true,
@@ -69,6 +69,6 @@
   },
   "engines": {
   "node": "6.11.1",
-  "npm": "3.10.9"
+  "npm": "3.10.10"
 }
 }
