--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "1.2.6",
+    "@angular/cli”: “1.4.9”,
     "@agm/core": "^1.0.0-beta.0",
     "@angular/animations": "^4.2.3",
     "@angular/common": "^4.2.3",
@@ -47,8 +47,8 @@
     "zone.js": "^0.8.12"
   },
   "devDependencies": {
-    "@angular/cli": "1.2.6",
-    "@angular/compiler-cli": "^4.2.3",
+    "@angular/cli”: “1.4.9”,
+    "@angular/compiler-cli": "^4.4.6",
     "@angular/language-service": "^4.2.3",
     "@types/hammerjs": "2.0.34",
     "@types/jasmine": "^2.5.52",
