--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cli”: “6.0.1”,
+    "@angular/cli”: “^6.0.1”,
     "@angular/compiler-cli": "^6.0.0",
     "@agm/core": "^1.0.0-beta.0",
     "@angular/animations": "^4.2.3",
